--- a/styles.css
+++ b/styles.css
@@ -26,21 +26,23 @@ margin:auto;
 
 }
 .container-fluid{
-  padding:3% 15%;
+  padding:3% 15% 7%;
 
 }
  .iphone-img{
-   transform:rotate(30deg);
-   width:60%;
-   margin-left:35%;
+   transform:rotate(25deg);
+   width:20%;
+   position:absolute;
+   right:25%;
  }
+
+
 .navbar-brand{
   font-size: 30px;
   font-weight: bold;
   font-family: 'Ubuntu', sans-serif;
 }
 .features-icons{
-
   color:#ef8172;
   margin-bottom: 2%;
 }
@@ -48,6 +50,11 @@ margin:auto;
   padding:8% 4%;
   text-align: center;
   line-height: 1.5;
+  background-color: white;
+  position: relative;
+  z-index: 1;
+
+
 }
 .features-h3{
 font-family:'Montserrat-bold', sans-serif;
@@ -65,7 +72,7 @@ font-family:'Montserrat-bold', sans-serif;
  }
 
  #testimonials{
-   padding:8% 4%;
+   padding:8% 4% 2% 4%;
    text-align: center;
    background-color:#ff4c68;
    color:white;
@@ -74,5 +81,53 @@ font-family:'Montserrat-bold', sans-serif;
  .dog-image{
    border-radius: 50%;
    width:10%;
-   margin:7% 3%;
+   margin:7% 2%  ;
  }
+
+ #press{
+   background-color:#ff4c68;
+   padding-bottom: 3%;
+   text-align: center;
+ }
+
+ .trust-logos{
+   width:15%;
+   margin:20px 20px 50px;
+ }
+.lady-image{
+  border-radius: 50%;
+  width:10%;
+  margin:7% 2%  ;
+}
+#pricing{
+  padding:100px;
+  text-align: center;
+}
+.card-container{
+  margin-top:5%;
+}
+
+.btn{
+  font-size: 0.9rem;
+}
+.price{
+  margin-bottom:20px;
+}
+.short{
+  margin-top: 20px;
+}
+
+@media (max-width:1000px) {
+.iphone-img{
+  position: static;
+  transform: rotate(0);
+  width: 60%;
+  margin-top: 20px;
+}
+ #title{
+   text-align: center;
+ }
+ h1{
+   text-align: center;
+ }
+}
