--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,16 @@ margin:auto;
   padding:3% 15% 7%;
 
 }
+
+.iphone-img-container{
+position:relative;
+}
  .iphone-img{
    transform:rotate(25deg);
-   width:20%;
+   width:55%;
    position:absolute;
    right:25%;
+   top:15px;
  }
 
 
@@ -120,14 +125,26 @@ font-family:'Montserrat-bold', sans-serif;
 @media (max-width:1000px) {
 .iphone-img{
   position: static;
-  transform: rotate(0);
-  width: 60%;
+  width: 50%;
   margin-top: 20px;
+  transform:rotate(30deg);
 }
  #title{
    text-align: center;
  }
  h1{
    text-align: center;
+   font-size:2rem;
  }
+ .testimonial-text{
+   font-size: 1.6rem;
+ }
+#pricing{
+  padding:50px 40px;
+}
+.container-fluid{
+  padding:3% 5% 7%;
+
+}
+
 }
